--- a/src/Components/landing.css
+++ b/src/Components/landing.css
@@ -228,10 +228,207 @@ body{
     font-size: 30px;
     font-weight: 400;
   }
- .imhContainer{
-    padding-top: 100px;
- }
- .imgSixze{
-    width: 80%;
-    background-color: #000000;
- }
+/* Landing.css or your custom stylesheet */
+
+.imhContainer {
+  position: relative;
+  padding-top: 100px;
+}
+
+.imgSize {
+  width: 80%;
+  border-radius: 50px;
+  background-color: #000000;
+  display: block; /* Ensure the image is a block-level element */
+  margin: auto; /* Center the image horizontally */
+}
+.footer{
+  margin: 80px;
+height: 50px;
+  background-color: #0075FF;
+  border-radius: 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+}
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  font-size: 60px;
+  padding-top: 25px;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.linear{
+ 
+
+}
+
+.overlay span {
+  background: linear-gradient(93.5deg, #FFFFFF 2.09%, #0075FF 78.11%);
+  -webkit-background-clip: text; /* Apply gradient only to the text content */
+  color: transparent; /* Make the text transparent to reveal the gradient background */
+}
+
+.overlay-image {
+  width: 50px; /* Adjust the width of the overlay image */
+  margin-top: 10px; /* Adjust the margin as needed */
+}
+/* Landing.css or your custom stylesheet */
+
+.centered-div {
+  text-align: center;
+  padding-top: 80px;
+}
+
+h2 {
+  margin-bottom: 10px; /* Add margin between heading and paragraphs */
+}
+
+p {
+  margin: 5px 0; /* Add margin as needed */
+}
+.forBetter
+{
+font-size: 50px;
+font-weight: 600;
+
+}
+.betterPara{
+  padding-top: 30px;
+  font-size: 20px;
+}
+.boxes{
+  padding-top: 65px;
+  display: flex;
+  align-items: center;
+}
+
+.box-div {
+  width: 25%; 
+  display: flex;
+  align-items: center;
+  height: 130px;
+  font-size: 12px;
+  margin-left: 100px;
+  /* border: 1px solid black; */
+  border-radius: 40px;
+  color: white;
+  background-color: #000000;
+}
+.iconBoxes{
+  height: 77px;
+    padding: 15px 
+}
+.next-div {
+  padding-top: 80px;
+  display: flex;
+  justify-content: space-between;
+}
+
+/* .left-side {
+  display: flex;
+  align-items: center;
+} */
+
+.icon-image {
+  width: 50px; 
+  margin-right: 10px; 
+}
+
+.right-side {
+  width: 63%;
+}
+
+.image-background {
+  background-color: #0075FF; 
+  height: 100px; 
+}
+
+.key-list {
+  list-style: none;
+  padding: 0;
+  margin-top: 20px; 
+}
+
+.key-list li {
+  margin-bottom: 10px; 
+}
+.right-sides {
+  width: 50%; 
+  background:#0075FF;
+  border-radius: 36px;
+  margin-right: 100px;
+  padding: 20px;
+}
+.image-on-rights {
+  width: 100%; 
+  height: 400px;
+}
+/* Landing.css or your custom stylesheet */
+
+.custom-div {
+  display: flex;
+ height: 400px;
+  justify-content: space-between;
+  /* align-items: center; */
+ 
+}
+.custom{
+  color: white;
+  margin: 115px;
+  background-color: #000000;
+  border-radius: 30px;
+  padding: 50px 60px;
+}
+.left-siders {
+  width: 33%;
+text-align: left; }
+
+/* Your CSS file, e.g., Landing.css */
+
+/* Your CSS file, e.g., Landing.css */
+
+/* Your CSS file, e.g., Landing.css */
+
+/* Your CSS file, e.g., Landing.css */
+
+.right-siders {
+  position: relative;
+  width: 425px;
+}
+
+.bottom-image {
+  padding-top: 20px;
+  padding-left: 20px;
+}
+
+.top-left-overlay {
+  position: absolute;
+  top: 10px;
+  left: -170px;
+}
+
+
+.bottom-line {
+  width: 100%;
+}
+
+hr {
+  border: none;
+  border-top: 1px solid #ccc;
+  margin-bottom: 10px; 
+}
+.lastSnap{
+  margin-left: 5px;
+  color: #84BCFF;
+  border-radius: 25px;
+  padding: 10px;
+  background-color: #191F25;
+}
