--- a/src/Components/landing.css
+++ b/src/Components/landing.css
@@ -1,234 +1,252 @@
-body{
-    background-color: #ffffff;
+body {
+  background-color: #ffffff;
+  margin: 10px 80px 10px 80px;
 }
 
-.top-nav{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px;
+.top-nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
-.left-nav{
-    display: flex;
-    align-items: center;
-    padding: 8px 10px;
-    font-size: 14px;
-    border-radius: 36px;
-    border: 1px solid #ccc;
-    background-color: black;
-    color: white;
-    margin-left: 90px;
+
+.left-nav {
+  display: flex;
+  align-items: center;
+  padding: 8px 10px;
+  font-size: 14px;
+  border-radius: 36px;
+  border: 1px solid #ccc;
+  background-color: black;
+  color: white;
 }
-.right-nav{
-    display: flex;
-    align-items: center;
-    margin-right: 90px;
+
+.right-nav {
+  display: flex;
+  align-items: center;
 }
-.left-nav div{
-    margin-left: 10px;
+
+.left-nav div {
+  margin-left: 10px;
 }
-.left-nav div:last-child{
-    margin-right: 19px;
+
+.left-nav div:last-child {
+  margin-right: 19px;
 }
-.last-div{
-    padding-left: 10px;
+
+.last-div {
+  padding-left: 10px;
+  cursor: pointer;
 }
-.profile-image{
-    width: 84px;
-    height: 11px;
-    padding: 5px 10px;
-    border-radius: 36px;
-    margin-right: 10px;
-    border: 1px solid #0075FF;
-    background-color: #0075FF;
+
+.profile-image {
+  cursor: pointer;
+  width: 84px;
+  height: 11px;
+  padding: 5px 10px;
+  border-radius: 36px;
+  margin-right: 10px;
+  border: 1px solid #0075FF;
+  background-color: #0075FF;
 }
-.right-nav span, .right-nav .navButton{
-    display: flex;
-    align-items: center;
-    margin-right: 15px;
+
+.right-nav span,
+.right-nav .navButton {
+  display: flex;
+  align-items: center;
+  margin-right: 15px;
 }
-.right-nav .icon{
-    width: 30px;
-    height: 30px;
-    margin-right: 5px;
+
+.right-nav .icon {
+  cursor: pointer;
+  width: 30px;
+  height: 30px;
+  margin-right: 5px;
 }
-.navButton{
-    display: flex;
-    align-items: center;
-    margin-right: 15px;
-    background-color:#0075FF ;
-    color: white;
-    gap: 12px;
-    border-radius: 36px;
-    font-size: 14px;
-    height: 15px;
-    padding: 10px;
-    border: none;
+
+.navButton {
+  display: flex;
+  cursor: pointer;
+  align-items: center;
+  margin-right: 15px;
+  background-color: #0075FF;
+  color: white;
+  gap: 12px;
+  border-radius: 36px;
+  font-size: 14px;
+  height: 15px;
+  padding: 10px;
+  border: none;
 }
-.navButton3{
-    margin-left: 35px;
-    display: flex;
-    align-items: center;
-    margin-right: 15px;
-    background-color:#000000 ;
-    color: white;
-    border-radius: 36px;
-    font-size: 14px;
-    height: 15px;
-    padding: 10px;
-    border: none;
+
+.navButton3 {
+  margin-left: 35px;
+  display: flex;
+  cursor: pointer;
+  align-items: center;
+  margin-right: 15px;
+  background-color: #000000;
+  color: white;
+  border-radius: 36px;
+  font-size: 14px;
+  height: 15px;
+  padding: 10px;
+  border: none;
 }
-.navButton2{
-    display: flex;
-    align-items: center;
-    margin-right: 15px;
-    gap: 12px;
-    border-radius: 36px;
-    font-size: 14px;
-    height: 15px;
-    padding: 10px;
-    border: 1px solid black;
+
+.navButton2 {
+  display: flex;
+  align-items: center;
+  margin-right: 15px;
+  gap: 12px;
+  border-radius: 36px;
+  font-size: 14px;
+  height: 15px;
+  padding: 10px;
+  border: 1px solid black;
 }
-.navButton2 .icon3{
-    width: 25px;
-    height: 25px;
+
+.navButton2 .icon3 {
+  width: 25px;
+  height: 25px;
 }
-.navButton span{
-    margin-left: 5px;
+
+.navButton span {
+  margin-left: 5px;
 }
-.navButton .icon3{
-    width: 25px;
-    height: 25px;
+
+.navButton .icon3 {
+  width: 25px;
+  height: 25px;
+}
+.icon3{
+  cursor: pointer;
 }
 .right-content {
-    display: flex;
-    /* margin-left: 44px; */
-    width: 100%;
-    /* padding-top: 90px; */
-  }
-  
-  .right-side {
-    width: 50%; 
-    background:linear-gradient(to top, #D4E8FF 80%,transparent 20%);
-    border-radius: 36px;
-    margin-right: 100px;
-    padding: 20px;
-  }
-  
-  .image-on-right {
-    width: 100%; 
-    height: 500px;
-  }
-  
-  .left-side {
-    width: 50%; 
-    padding-top: 115px;
-    font-weight: 600;
-    text-align: left;
-  }
-  .mainText{
-    font-size: 55px;
-    font-weight: 700;
-    margin-left: 110px;
-  }
-  .mainText1{
-    font-size: 55px;
-    color: #0075FF;
-    font-weight: 700;
-    margin-left: 110px;
-  }
+  display: flex;
+  width: 100%;
+}
 
-  
- 
-  
-  .mainText1, .mainText {
-    margin-right: 5px;
-  }
-  
-  .image-in-text {
-    width: 39px;
-    height: 32px;
-    margin-left: 12px;
+.right-side {
+  width: 50%;
+  background: linear-gradient(to top, #D4E8FF 80%, transparent 20%);
+  border-radius: 36px;
+  padding: 20px;
+}
 
-  }
-  .buttonsleft{
-    padding-top: 100px;
-    display: flex;
-    margin-left: 110px;
-  }
+.image-on-right {
+  width: 100%;
+  height: 500px;
+}
 
- 
+.left-side {
+  width: 50%;
+  padding-top: 115px;
+  font-weight: 600;
+  text-align: left;
+}
+
+.mainText {
+  font-size: 55px;
+  font-weight: 700;
+}
+
+.mainText1 {
+  font-size: 55px;
+  color: #0075FF;
+  font-weight: 700;
+}
+
+
+
+
+.mainText1,
+.mainText {
+  margin-right: 5px;
+}
+
+.image-in-text {
+  width: 39px;
+  height: 32px;
+  margin-left: 12px;
+
+}
+
+.buttonsleft {
+  padding-top: 100px;
+  display: flex;
+}
+
+
 
 .your-parent-container {
-    display: flex;
-    padding-top: 70px;
-    gap:40px
-  }
-  
-  .left-div {
-    width: 35%; 
-    display: flex;
-    align-items: center;
-    height: 130px;
-    margin-left: 110px;
-    /* border: 1px solid black; */
-    border-radius: 40px;
-    color: white;
-    background-color: #000000;
-  }
-  
-  .left-div img {
-    /* width: 100%; */
-  }
-  
-  .left-div div {
-    margin-top: 10px; 
-  }
-  
-  .left-div .second-image {
-  }
-  
-  .right-div {
-    width: 60%; 
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    height: 130px;
-    margin-right: 100px;
-    /* border: 1px solid black; */
-    border-radius: 40px;
-    color: white;
-    background-color: #0075FF;
-  }
-  .textleft{
-    font-size: 18px;
-    text-align: left;
-  }
-  .right-div div {
-    display: flex;
-    align-items: center;
-  }
-  .IconsText  {
-    display: flex;
-    flex-direction: column;
-    padding: 5px;
-  }
-  .right-div img {
-    width: 50px; 
-    /* margin-right: 10px; */
-  }
-  .iconBox{
-    padding: 20px;
-    height: 111px;
+  display: flex;
+  padding-top: 70px;
+  gap: 40px
 }
-  .IconsText{
-    display: flex;
-  }
-  .SecondCal{
-    font-size: 30px;
-    font-weight: 400;
-  }
-/* Landing.css or your custom stylesheet */
+
+.left-div {
+  cursor: pointer;
+  width: 35%;
+  display: flex;
+  align-items: center;
+  height: 130px;
+  border-radius: 40px;
+  color: white;
+  background-color: #000000;
+}
+
+
+.left-div div {
+  margin-top: 10px;
+}
+
+.left-div .second-image {}
+
+.right-div {
+  width: 60%;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  height: 130px;
+  border-radius: 40px;
+  color: white;
+  background-color: #0075FF;
+}
+
+.textleft {
+  font-size: 18px;
+  text-align: left;
+}
+
+.right-div div {
+  display: flex;
+  align-items: center;
+}
+
+.IconsText {
+  display: flex;
+  flex-direction: column;
+  padding: 5px;
+}
+
+.right-div img {
+  width: 50px;
+}
+
+.iconBox {
+  padding: 20px;
+  height: 111px;
+}
+
+.IconsText {
+  display: flex;
+}
+
+.SecondCal {
+  font-size: 30px;
+  font-weight: 400;
+}
+
 
 .imhContainer {
   position: relative;
@@ -239,12 +257,12 @@ body{
   width: 80%;
   border-radius: 50px;
   background-color: #000000;
-  display: block; /* Ensure the image is a block-level element */
-  margin: auto; /* Center the image horizontally */
+  display: block;
+  margin: auto;
 }
-.footer{
-  margin: 80px;
-height: 50px;
+
+.footer {
+  height: 50px;
   background-color: #0075FF;
   border-radius: 20px;
   display: flex;
@@ -252,6 +270,7 @@ height: 50px;
   align-items: center;
 
 }
+
 .overlay {
   position: absolute;
   top: 0;
@@ -265,22 +284,20 @@ height: 50px;
   align-items: center;
   justify-content: center;
 }
-.linear{
- 
 
-}
+.linear {}
 
 .overlay span {
   background: linear-gradient(93.5deg, #FFFFFF 2.09%, #0075FF 78.11%);
-  -webkit-background-clip: text; /* Apply gradient only to the text content */
-  color: transparent; /* Make the text transparent to reveal the gradient background */
+  -webkit-background-clip: text;
+  color: transparent;
 }
 
 .overlay-image {
-  width: 50px; /* Adjust the width of the overlay image */
-  margin-top: 10px; /* Adjust the margin as needed */
+  width: 50px;
+  margin-top: 10px;
 }
-/* Landing.css or your custom stylesheet */
+
 
 .centered-div {
   text-align: center;
@@ -288,58 +305,58 @@ height: 50px;
 }
 
 h2 {
-  margin-bottom: 10px; /* Add margin between heading and paragraphs */
+  margin-bottom: 10px;
 }
 
 p {
-  margin: 5px 0; /* Add margin as needed */
+  margin: 5px 0;
 }
-.forBetter
-{
-font-size: 50px;
-font-weight: 600;
+
+.forBetter {
+  font-size: 50px;
+  font-weight: 600;
 
 }
-.betterPara{
+
+.betterPara {
   padding-top: 30px;
   font-size: 20px;
 }
-.boxes{
+
+.boxes {
   padding-top: 65px;
   display: flex;
   align-items: center;
+  justify-content: space-between;
 }
 
 .box-div {
-  width: 25%; 
+  width: 25%;
   display: flex;
   align-items: center;
   height: 130px;
   font-size: 12px;
-  margin-left: 100px;
+  /* margin-left: 100px; */
   /* border: 1px solid black; */
   border-radius: 40px;
   color: white;
   background-color: #000000;
 }
-.iconBoxes{
+
+.iconBoxes {
   height: 77px;
-    padding: 15px 
+  padding: 15px
 }
+
 .next-div {
   padding-top: 80px;
   display: flex;
   justify-content: space-between;
 }
 
-/* .left-side {
-  display: flex;
-  align-items: center;
-} */
-
 .icon-image {
-  width: 50px; 
-  margin-right: 10px; 
+  width: 50px;
+  margin-right: 10px;
   height: 60px;
 }
 
@@ -348,49 +365,53 @@ font-weight: 600;
 }
 
 .image-background {
-  background-color: #0075FF; 
-  height: 100px; 
+  background-color: #0075FF;
+  height: 100px;
 }
 
 .key-list {
   list-style: none;
   padding: 0;
-  margin-top: 20px; 
+  margin-top: 20px;
 }
 
 .key-list li {
-  margin-bottom: 10px; 
+  margin-bottom: 10px;
 }
+
 .right-sides {
-  width: 50%; 
-  background:#0075FF;
+  width: 50%;
+  background: #0075FF;
   border-radius: 36px;
-  margin-right: 100px;
+  /* margin-right: 100px; */
   padding: 20px;
 }
+
 .image-on-rights {
-  width: 100%; 
+  width: 100%;
   height: 400px;
 }
-/* Landing.css or your custom stylesheet */
+
 
 .custom-div {
   display: flex;
- height: 400px;
+  height: 400px;
   justify-content: space-between;
-  /* align-items: center; */
- 
+
 }
-.custom{
+
+.custom {
   color: white;
   margin: 115px;
   background-color: #000000;
   border-radius: 30px;
   padding: 50px 60px;
 }
+
 .left-siders {
   width: 33%;
-text-align: left; }
+  text-align: left;
+}
 
 /* Your CSS file, e.g., Landing.css */
 
@@ -412,8 +433,8 @@ text-align: left; }
 
 .top-left-overlay {
   position: absolute;
-  top: 10px;
-  left: -170px;
+  top: -72px;
+  left: -232px;
 }
 
 
@@ -424,54 +445,321 @@ text-align: left; }
 hr {
   border: none;
   border-top: 1px solid #ccc;
-  margin-bottom: 10px; 
+  margin-bottom: 10px;
 }
-.lastSnap{
+
+.lastSnap {
   margin-left: 5px;
   color: #84BCFF;
   border-radius: 25px;
   padding: 10px;
   background-color: #191F25;
 }
-.Icon-para{
+
+.Icon-para {
   display: flex;
   justify-content: center;
   /* align-items: center; */
 }
-.paragraph{
+
+.paragraph {
   width: 339px;
-    font-size: 14px;
+  font-size: 14px;
 }
-.image-para{
+
+.image-para {
   padding-top: 6px;
   display: flex;
   flex-direction: column;
-    align-items: center;
+  align-items: center;
 }
-.icimage{
+
+.icimage {
   padding-top: 10px;
 }
-.heading-para{
+
+.heading-para {
   font-size: 27px;
   color: #0075FF;
 }
-.subHeading{
+
+.subHeading {
   font-weight: 700;
 }
-.leftsZ-side{
-  width: 50%; 
-    padding-top: 35px;
-    font-weight: 600;
-    text-align: left;
+
+.leftsZ-side {
+  width: 50%;
+  padding-top: 35px;
+  font-weight: 600;
+  text-align: left;
 }
-.U-list{
+
+.U-list {
   padding-top: 40px;
 }
-.subHeadingul{
+
+.subHeadingul {
   padding-left: 20px;
   font-size: 16px;
   font-weight: 700;
 }
-.imagepar{
+
+.imagepar {
   padding-right: 7px;
+}
+
+.iconhem {
+  display: none;
+
+}
+
+.buttonsleftmobile {
+  display: none;
+}
+
+.U-list-Mobile {
+  display: none;
+}
+.rightAow{
+  padding-left: 115px;
+}
+
+@media (max-width: 768px) {
+
+  body {
+    width: 100%;
+    margin: 10px 20px 10px 20px;
+
+  }
+
+  .left-nav {
+    background-color: transparent;
+    border: none;
+  }
+
+  .left-nav div {
+    display: none;
+  }
+
+  .right-nav .navButton {
+    display: none;
+  }
+
+  .right-nav .icon {
+    display: none;
+  }
+
+  .iconhem {
+    display: block;
+    cursor: pointer;
+  }
+
+  .right-content {
+    flex-direction: column;
+  }
+
+  .right-side {
+    margin-top: 0;
+    width: 86%;
+  }
+
+  .left-side {
+    width: 100%;
+    padding-top: 50px;
+    font-weight: 600;
+    text-align: left;
+  }
+
+  .buttonsleft {
+    display: none;
+  }
+
+  .buttonsleftmobile {
+    padding-top: 50px;
+    display: flex;
+    justify-content: space-around;
+  }
+
+  .your-parent-container {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .left-div {
+    width: 100%;
+  }
+
+  .right-div {
+    width: 100%;
+  }
+
+  .imgSize {
+    width: 100%;
+    height: 200px;
+  }
+
+  .overlay {
+    font-size: 2rem;
+    padding-top: 34px;
+  }
+
+  .boxes {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .box-div {
+    width: 100%;
+    margin: 10px;
+  }
+
+  .next-div {
+    width: 100%;
+    padding-top: 80px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+
+  .paragraph {
+    width: 100%;
+    font-size: 14px;
+    text-align: left;
+  }
+
+  .U-list {
+    display: none;
+  }
+
+  .next-div {
+    padding-top: 5px;
+  }
+
+  .leftsZ-side {
+    width: 100%;
+    font-weight: 600;
+    text-align: left;
+  }
+
+  .right-sides {
+    width: 86%;
+    background: #0075FF;
+    border-radius: 36px;
+    padding: 20px;
+  }
+
+  .U-list-Mobile {
+    padding-top: 20px;
+    display: block;
+  }
+
+  .custom {
+    color: white;
+    margin: 0px;
+    background-color: #000000;
+    border-radius: 30px;
+    padding: 10px 10px;
+  }
+
+  .custom-div {
+    display: flex;
+    height: max-content;
+    flex-direction: column;
+  }
+
+  .left-siders {
+    width: 100%;
+    text-align: left;
+  }
+  .rightAow{
+    padding-left: 1px;
+  }
+  .right-siders {
+    width: 100%;
+    padding-top: 40px;
+    padding: 17px;
+    text-align: left;
+    display: flex;
+    justify-content: center;
+  }
+  .top-left-overlay {
+    position: absolute;
+    top: -29px;
+    left: -25px;
+  }
+  
+  p {
+    margin: 15px 10px;
+  }
+
+  div.footer {
+    margin-top: 50px;
+
+  }
+  .bottom-line {
+   display: none;
+}
+.bottom-image {
+  padding-top: 20px;
+  padding-left: 20px;
+  width: 191px;
+
+}
+
+.top-left-overlay {
+  position: absolute;
+  left: 1px;
+    width: 279px;
+}
+.navButton3{
+  margin-left: 0px;
+  margin-right: 2px;
+}
+.navButton{
+  margin: 0;
+}
+.navButton2{
+  margin: 0;
+  border: none;
+}
+.image-on-right {
+  height: 344px;
+}
+.image-on-rights {
+  height: 277px;
+}
+.navButton span {
+  width: 75px;
+}
+.right-div {
+  flex-direction: row;
+  height: 99px;
+}
+.left-div{
+  height: 99px;
+  display: flex;
+    justify-content: space-around;
+}
+.imhContaine{
+  padding-top: 0px;
+}
+.iconBox {
+  padding: 20px;
+  height: 80px;
+}
+.right-div div {
+  margin-bottom: 0; 
+}
+.Font-ch{
+  font-size: 10px;
+}
+.SecondCal{
+  font-size: 20px;
+}
+.right-div img {
+  width: 20px;
+}
+.icon3{
+  width: 35px;
+}
 }
