--- a/src/Components/landing.css
+++ b/src/Components/landing.css
@@ -118,9 +118,11 @@ body {
   width: 25px;
   height: 25px;
 }
-.icon3{
+
+.icon3 {
   cursor: pointer;
 }
+
 .right-content {
   display: flex;
   width: 100%;
@@ -276,7 +278,7 @@ body {
   top: 0;
   left: 0;
   width: 100%;
-  font-size: 60px;
+  font-size: 3em;
   padding-top: 25px;
   height: 100%;
   display: flex;
@@ -493,6 +495,16 @@ hr {
   font-weight: 600;
   text-align: left;
 }
+.landing-container {
+    opacity: 0;
+    transform: translateY(-20px);
+    transition: opacity 0.5s ease, transform 0.5s ease;
+}
+
+.landing-container.loaded {
+    opacity: 1;
+    transform: translateY(0);
+}
 
 .U-list {
   padding-top: 40px;
@@ -520,11 +532,217 @@ hr {
 .U-list-Mobile {
   display: none;
 }
-.rightAow{
+
+.rightAow {
   padding-left: 115px;
 }
 
-@media (max-width: 768px) {
+@media (max-width:850px) {
+  .next-div {
+    width: 100%;
+    padding-top: 80px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+  .U-list {
+    /* display: block; */
+  }
+  .paragraph {
+    width: 100%;
+    font-size: 14px;
+    text-align: left;
+  }
+
+  .U-list {
+    display: block;
+  }
+
+  .next-div {
+    padding-top: 5px;
+  }
+
+  .leftsZ-side {
+    width: 100%;
+    font-weight: 600;
+    text-align: left;
+  }
+
+  .right-sides {
+    width: 86%;
+    background: #0075FF;
+    border-radius: 36px;
+    padding: 20px;
+  }
+}
+
+@media (max-width: 1415px) {
+  .custom {
+    color: white;
+    margin: 100px 0px 100px 0px;
+
+    background-color: #000000;
+    border-radius: 30px;
+    padding: 10px 10px;
+  }
+
+  .bottom-line {
+    display: none;
+  }
+
+  .custom-div {
+    display: flex;
+    height: max-content;
+    flex-direction: column;
+  }
+
+  .left-siders {
+    width: 100%;
+    text-align: left;
+  }
+
+  .rightAow {
+    padding-left: 1px;
+  }
+
+  .right-siders {
+    /* width: 100%; */
+    padding-top: 40px;
+    padding: 17px;
+    text-align: left;
+    display: flex;
+    justify-content: center;
+  }
+
+  .top-left-overlay {
+    position: absolute;
+    top: -29px;
+    left: -25px;
+  }
+
+  p {
+    margin: 15px 10px;
+  }
+
+  .boxes {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .box-div {
+    width: 100%;
+    margin: 10px;
+  }
+
+
+
+  .paragraph {
+    width: 100%;
+    font-size: 14px;
+    text-align: left;
+  }
+
+  
+
+  .next-div {
+    padding-top: 5px;
+  }
+}
+
+@media (max-width: 460px) {
+  .right-siders {
+    width: 100%;
+  }
+}
+@media (max-width: 1000px) {
+  .right-content {
+    flex-direction: column;
+  }
+  .right-side {
+    margin-top: 0;
+    width: 86%;
+  }
+
+  .left-side {
+    width: 100%;
+    padding-top: 50px;
+    font-weight: 600;
+    text-align: left;
+  }
+}
+@media (max-width: 1100px) {
+  .your-parent-container {
+    display: flex;
+    flex-direction: column;
+  }
+.iconBox{
+  padding: 20px;
+  height: 80px
+}
+  .left-div {
+    width: 100%;
+  }
+
+  .right-div {
+    width: 100%;
+  }
+
+  .imgSize {
+    width: 100%;
+    height: 200px;
+  }
+
+  .overlay {
+    font-size: 2rem;
+    padding-top: 34px;
+  }
+
+  .boxes {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .box-div {
+    width: 100%;
+    margin: 10px;
+  }
+
+  .next-div {
+    width: 100%;
+    padding-top: 80px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+
+  .paragraph {
+    width: 100%;
+    font-size: 14px;
+    text-align: left;
+  }
+
+  .U-list {
+    display: none;
+  }
+
+  .next-div {
+    padding-top: 5px;
+  }
+
+  .leftsZ-side {
+    width: 100%;
+    font-weight: 600;
+    text-align: left;
+  }
+  .left-div {
+    height: 99px;
+    display: flex;
+    justify-content: space-around;
+  }
+
+}
+
+@media (max-width: 770px) {
 
   body {
     width: 100%;
@@ -671,23 +889,26 @@ hr {
     width: 100%;
     text-align: left;
   }
-  .rightAow{
+
+  .rightAow {
     padding-left: 1px;
   }
+
   .right-siders {
-    width: 100%;
+    /* width: 100%; */
     padding-top: 40px;
     padding: 17px;
     text-align: left;
     display: flex;
     justify-content: center;
   }
+
   .top-left-overlay {
     position: absolute;
     top: -29px;
     left: -25px;
   }
-  
+
   p {
     margin: 15px 10px;
   }
@@ -696,70 +917,87 @@ hr {
     margin-top: 50px;
 
   }
+
   .bottom-line {
-   display: none;
-}
-.bottom-image {
-  padding-top: 20px;
-  padding-left: 20px;
-  width: 191px;
+    display: none;
+  }
 
-}
+  .bottom-image {
+    padding-top: 20px;
+    padding-left: 20px;
+    width: 191px;
 
-.top-left-overlay {
-  position: absolute;
-  left: 1px;
+  }
+
+  .top-left-overlay {
+    position: absolute;
+    left: 1px;
     width: 279px;
-}
-.navButton3{
-  margin-left: 0px;
-  margin-right: 2px;
-}
-.navButton{
-  margin: 0;
-}
-.navButton2{
-  margin: 0;
-  border: none;
-}
-.image-on-right {
-  height: 344px;
-}
-.image-on-rights {
-  height: 277px;
-}
-.navButton span {
-  width: 75px;
-}
-.right-div {
-  flex-direction: row;
-  height: 99px;
-}
-.left-div{
-  height: 99px;
-  display: flex;
+  }
+
+  .navButton3 {
+    margin-left: 0px;
+    margin-right: 2px;
+  }
+
+  .navButton {
+    margin: 0;
+  }
+
+  .navButton2 {
+    margin: 0;
+    border: none;
+  }
+
+  .image-on-right {
+    height: 344px;
+  }
+
+  .image-on-rights {
+    height: 277px;
+  }
+
+  .navButton span {
+    width: 75px;
+  }
+
+  .right-div {
+    flex-direction: row;
+    height: 99px;
+  }
+
+  .left-div {
+    height: 99px;
+    display: flex;
     justify-content: space-around;
-}
-.imhContaine{
-  padding-top: 0px;
-}
-.iconBox {
-  padding: 20px;
-  height: 80px;
-}
-.right-div div {
-  margin-bottom: 0; 
-}
-.Font-ch{
-  font-size: 10px;
-}
-.SecondCal{
-  font-size: 20px;
-}
-.right-div img {
-  width: 20px;
-}
-.icon3{
-  width: 35px;
-}
+  }
+
+  .imhContaine {
+    padding-top: 0px;
+  }
+
+  .iconBox {
+    padding: 20px;
+    height: 80px;
+  }
+
+  .right-div div {
+    margin-bottom: 0;
+  }
+
+  .Font-ch {
+    font-size: 10px;
+  }
+
+  .SecondCal {
+    font-size: 20px;
+  }
+
+  .right-div img {
+    width: 20px;
+  }
+
+  .icon3 {
+    width: 35px;
+  }
 }
